@@ -3,12 +3,17 @@ package com.pt.recommendation_service.service;
 import com.pt.recommendation_service.dto.CryptoNormalizedRangeDto;
 import com.pt.recommendation_service.dto.CryptoStatsDto;
 import com.pt.recommendation_service.entity.Price;
+import com.pt.recommendation_service.enums.SupportedCryptos;
+import com.pt.recommendation_service.exception.InvalidDateFormatException;
+import com.pt.recommendation_service.exception.NoPriceFoundForDateException;
+import com.pt.recommendation_service.exception.UnsupportedCryptoException;
 import com.pt.recommendation_service.repository.PriceRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -16,6 +21,7 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -33,7 +39,6 @@ class PriceServiceTest {
 
     @Test
     void getNormalizedRangesDesc_returnsCorrectRangesAndOrder() {
-        // Given
         Price btc1 = new Price();
         btc1.setSymbol("BTC");
         btc1.setPrice(100.0);
@@ -53,14 +58,10 @@ class PriceServiceTest {
         List<Price> prices = Arrays.asList(btc1, btc2, eth1, eth2);
         when(priceRepository.findAll()).thenReturn(prices);
 
-        // When
         List<CryptoNormalizedRangeDto> result = priceService.getNormalizedRangesDesc();
 
-        // Then
         assertEquals(2, result.size());
 
-        // BTC: (200-100)/100 = 1.0
-        // ETH: (100-50)/50 = 1.0
         assertEquals("BTC", result.get(0).getSymbol());
         assertEquals(1.0, result.get(0).getNormalizedRange());
         assertEquals("ETH", result.get(1).getSymbol());
@@ -69,7 +70,6 @@ class PriceServiceTest {
 
     @Test
     void getNormalizedRangesDesc_skipsSymbolWithZeroMinPrice() {
-        // Given
         Price btc1 = new Price();
         btc1.setSymbol("BTC");
         btc1.setPrice(0.0);
@@ -81,29 +81,22 @@ class PriceServiceTest {
         List<Price> prices = Arrays.asList(btc1, btc2);
         when(priceRepository.findAll()).thenReturn(prices);
 
-        // When
         List<CryptoNormalizedRangeDto> result = priceService.getNormalizedRangesDesc();
 
-        // Then
-        // Should skip BTC because min price is zero (division by zero)
         assertTrue(result.isEmpty());
     }
 
     @Test
     void getNormalizedRangesDesc_returnsEmptyListIfNoPrices() {
-        // Given
-        when(priceRepository.findAll()).thenReturn(Arrays.asList());
+        when(priceRepository.findAll()).thenReturn(List.of());
 
-        // When
         List<CryptoNormalizedRangeDto> result = priceService.getNormalizedRangesDesc();
 
-        // Then
         assertTrue(result.isEmpty());
     }
 
     @Test
     void getHighestNormalizedRangeForDate_returnsHighestRange() {
-        // Given
         LocalDateTime start = LocalDateTime.of(2022, 1, 1, 0, 0);
         LocalDateTime end = LocalDateTime.of(2022, 1, 2, 0, 0);
 
@@ -130,26 +123,11 @@ class PriceServiceTest {
         List<Price> prices = Arrays.asList(btc1, btc2, eth1, eth2);
         when(priceRepository.findByDateTimeGreaterThanEqualAndDateTimeLessThan(start, end)).thenReturn(prices);
 
-        // When
         CryptoNormalizedRangeDto result = priceService.getHighestNormalizedRangeForDate("2022-01-01");
 
-        // Then
         assertNotNull(result);
-        // Both BTC and ETH have normalized range 1.0, but BTC comes first in the list
         assertTrue(result.getNormalizedRange() == 1.0);
         assertTrue(result.getSymbol().equals("BTC") || result.getSymbol().equals("ETH"));
-    }
-
-    @Test
-    void getHighestNormalizedRangeForDate_returnsNullIfNoPrices() {
-        LocalDateTime start = LocalDateTime.of(2022, 1, 1, 0, 0);
-        LocalDateTime end = LocalDateTime.of(2022, 1, 2, 0, 0);
-
-        when(priceRepository.findByDateTimeGreaterThanEqualAndDateTimeLessThan(start, end)).thenReturn(Arrays.asList());
-
-        CryptoNormalizedRangeDto result = priceService.getHighestNormalizedRangeForDate("2022-01-01");
-
-        assertNull(result);
     }
 
     @Test
@@ -172,8 +150,22 @@ class PriceServiceTest {
 
         CryptoNormalizedRangeDto result = priceService.getHighestNormalizedRangeForDate("2022-01-01");
 
-        // Should skip BTC because min price is zero (division by zero)
         assertNull(result);
+    }
+
+    @Test
+    void getHighestNormalizedRangeForDate_throwsInvalidDateFormatException_whenDateIsInvalid() {
+        String invalidDate = "not-a-date";
+        assertThrows(InvalidDateFormatException.class, () -> priceService.getHighestNormalizedRangeForDate(invalidDate));
+    }
+
+    @Test
+    void getHighestNormalizedRangeForDate_throwsNoPriceFoundForDateException_whenNoPricesFound() {
+        String validDate = "2022-01-01";
+        when(priceRepository.findByDateTimeGreaterThanEqualAndDateTimeLessThan(any(), any()))
+                .thenReturn(Collections.emptyList());
+
+        assertThrows(NoPriceFoundForDateException.class, () -> priceService.getHighestNormalizedRangeForDate(validDate));
     }
 
     @Test
@@ -200,7 +192,38 @@ class PriceServiceTest {
         CryptoStatsDto result = priceService.getStatsForSymbol(symbol);
 
         assertNotNull(result);
-        assertEquals(symbol, result.getSymbol());
+        assertEquals(SupportedCryptos.BTC, result.getSymbol());
+        assertEquals(100.0, result.getOldest());
+        assertEquals(200.0, result.getNewest());
+        assertEquals(90.0, result.getMin());
+        assertEquals(210.0, result.getMax());
+    }
+
+    @Test
+    void getStatsForSymbol_returnsCorrectStatsWithLowercaseSymbol() {
+        String symbol = "btc";
+
+        Price oldest = new Price();
+        oldest.setPrice(100.0);
+
+        Price newest = new Price();
+        newest.setPrice(200.0);
+
+        Price min = new Price();
+        min.setPrice(90.0);
+
+        Price max = new Price();
+        max.setPrice(210.0);
+
+        when(priceRepository.findFirstBySymbolOrderByDateTimeAsc(symbol)).thenReturn(oldest);
+        when(priceRepository.findFirstBySymbolOrderByDateTimeDesc(symbol)).thenReturn(newest);
+        when(priceRepository.findFirstBySymbolOrderByPriceAsc(symbol)).thenReturn(min);
+        when(priceRepository.findFirstBySymbolOrderByPriceDesc(symbol)).thenReturn(max);
+
+        CryptoStatsDto result = priceService.getStatsForSymbol(symbol);
+
+        assertNotNull(result);
+        assertEquals(SupportedCryptos.BTC, result.getSymbol());
         assertEquals(100.0, result.getOldest());
         assertEquals(200.0, result.getNewest());
         assertEquals(90.0, result.getMin());
@@ -217,5 +240,12 @@ class PriceServiceTest {
         when(priceRepository.findFirstBySymbolOrderByPriceDesc(symbol)).thenReturn(null);
 
         assertThrows(NullPointerException.class, () -> priceService.getStatsForSymbol(symbol));
+    }
+
+    @Test
+    void getStatsForSymbol_throwsException_whenSymbolIsNotSupported() {
+        String symbol = "INVALID";
+
+        assertThrows(UnsupportedCryptoException.class, () -> priceService.getStatsForSymbol(symbol));
     }
 }
